k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devops-lab
  name: devops-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-lab
  template:
    metadata:
      labels:
        app: devops-lab
    spec:
      containers:
      - image: devops-lab
        name: devops-lab
