k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-lab
  name: devops-lab
spec:
  ports:
    - port: 3000
  selector:
    app: devops-lab
