k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-lab-ingress
spec:
  rules:
    - host: api.devops-lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-lab
                port:
                  number: 3000
